--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "nunjucks": "^3.0.0",
     "pg": "^6.1.2",
